# Coinc

./: .gitignore  Conic_v1.3.0.alfredworkflow  Conic_v1.3.1.alfredworkflow  Conic_v2.0.0.alfredworkflow  Conic_v3.1.0.alfredworkflow  Conic_v3.1.1.alfredworkflow  Coon.alfredworkflow  Coon_v1.0.0.alfredworkflow  Coon_v1.0.1.alfredworkflow  Coon_v1.1.0.alfredworkflow  Coon_v1.2.0.alfredworkflow  Currencies.md  Currency Converter.alfredworkflow  Feature Draft.md  LICENSE  Makefile  README.md  main.py  pyproject.toml  workflow-builder.py
.github/: FUNDING.yml
.github/workflows/: test.yml
currency/: __init__.py  config.py  query.py  utils.py
src/: alias.json  currencies.json  default_settings.json  index.py  info.plist  main.py  symbols.json
src/coinc/: __init__.py  alfred.py  config.py  exceptions.py  query.py  utils.py
src/currency/: __init__.py  config.py  exceptions.py  query.py  utils.py
src/flags/: ! - list.txt  _missing.py
src/workflow/: workflow3.py
tests/: conftest.py  test_alias.py  test_convert.py  test_load.py  test_rates.json
